# vla-evaluation-harness

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/add-benchmark/: SKILL.md
.claude/skills/add-model-server/: SKILL.md
.docker_cfg/: libero_smoke_test.yaml  libero_spatial.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: leaderboard-validate.yml  update-data.yml
leaderboard/: CONTRIBUTING.md
leaderboard/data/: results.json
leaderboard/scripts/: update_coverage.py  validate.py
src/vla_eval/cli/: main.py  smoke.py
src/vla_eval/model_servers/: xvla.py
src/vla_eval/runners/: sync_runner.py
